Funcion agregar por terminar

--- a/index.html
+++ b/index.html
@@ -43,8 +43,29 @@
         </table>
 
     </main>
+    <!--Modal para agregar integrantes-->
+    <dialog id="modal-agregar" >
+        <article>
+            <header>
+                <a href="#" class="close" id="btnCerrarModal"></a>
+                <h3>Agregar participante</h3>
+            </header>
+            <form id="frmAgregar">
+                <input type="text" id="nombre" placeholder="Nombre" required>
+                <input type="text" id="apellido" placeholder="Apellido" required>
+                <input type="email" id="email" placeholder="Correo electrónico" required>
+                <input type="edad" placeholder="edad" id="edad" required>
+                <button type="submit" class="contrast">Guardar</button>
+            </form>
+        </article>
 
+    </dialog>
 
+    <!--Botón flotante para agregar registros-->
+    <button class="add-button" id="btnAbrirModal" title="Agregar Integrante">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+
+    </button>
 
     <script src="js/script.js"></script>
 </body>
