--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
 
     </dialog>
 
+    <!--Modal para editar integrantes-->
+    <dialog id="modal-editar" >
+        <article>
+            <header>
+                <a href="#" class="close" id="btnCerrarEditar"></a>
+                <h3>Modificar participante</h3>
+            </header>
+            <form id="frmEditar">
+                <input type="hidden" id="idEditar">
+                <input type="text" id="nombreEditar" placeholder="Nombre" required>
+                <input type="text" id="apellidoEditar" placeholder="Apellido" required>
+                <input type="email" id="emailEditar" placeholder="Correo electrónico" required>
+                <input type="edad" placeholder="edad" id="edadEditar" required>
+                <button type="submit" class="contrast">Guardar</button>
+            </form>
+        </article>
+
+    </dialog>
+
     <!--Botón flotante para agregar registros-->
     <button class="add-button" id="btnAbrirModal" title="Agregar Integrante">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
